--- a/client/divExemple.html
+++ b/client/divExemple.html
@@ -1,4 +1,5 @@
-<div class="w3-row-padding w3-margin-bottom">
+<body>
+    <div class="w3-row-padding w3-margin-bottom">
         <div class="w3-quarter">
             <div class="w3-container w3-red w3-padding-16">
                 <div class="w3-left"><i class="ion-chatboxes w3-xxxlarge"></i></div>
@@ -40,3 +41,4 @@
             </div>
         </div>
     </div>
+</body>
