Afegits fitxers d'exemple de paginació i rols

--- a/client/divExemple.html
+++ b/client/divExemple.html
@@ -1,42 +1,45 @@
-<div class="w3-row-padding w3-margin-bottom">
-        <div class="w3-quarter">
-            <div class="w3-container w3-red w3-padding-16">
-                <div class="w3-left"><i class="ion-chatboxes w3-xxxlarge"></i></div>
-                <div class="w3-right">
-                    <h3>52</h3>
-                </div>
-                <div class="w3-clear"></div>
-                <h4>Missatges</h4>
-            </div>
-        </div>
-        <div class="w3-quarter">
-            <div class="w3-container w3-blue w3-padding-16">
-                <div class="w3-left"><i class="ion-android-upload w3-xxxlarge"></i></div>
-                <div class="w3-right">
-                    <h3>99</h3>
-                </div>
-                <div class="w3-clear"></div>
-                <h4>Pujar radiografia</h4>
-            </div>
-        </div>
-        <div class="w3-quarter">
-            <div class="w3-container w3-teal w3-padding-16">
-                <div class="w3-left"><i class="ion-ios-bookmarks w3-xxxlarge"></i></div>
-                <div class="w3-right">
-                    <h3>23</h3>
-                </div>
-                <div class="w3-clear"></div>
-                <h4>Temari</h4>
-            </div>
-        </div>
-        <div class="w3-quarter">
-            <div class="w3-container w3-orange w3-text-white w3-padding-16">
-                <div class="w3-left"><i class="ion-person w3-xxxlarge"></i></div>
-                <div class="w3-right">
-                    <h3>50</h3>
-                </div>
-                <div class="w3-clear"></div>
-                <h4>Usuaris</h4>
-            </div>
-        </div>
-    </div>
+<template name="divExemple">
+  <div class="w3-row-padding w3-margin-bottom">
+          <div class="w3-quarter">
+              <div class="w3-container w3-red w3-padding-16">
+                  <div class="w3-left"><i class="ion-chatboxes w3-xxxlarge"></i></div>
+                  <div class="w3-right">
+                      <h3>52</h3>
+                  </div>
+                  <div class="w3-clear"></div>
+                  <h4>Missatges</h4>
+              </div>
+          </div>
+          <div class="w3-quarter">
+              <div class="w3-container w3-blue w3-padding-16">
+                  <div class="w3-left"><i class="ion-android-upload w3-xxxlarge"></i></div>
+                  <div class="w3-right">
+                      <h3>99</h3>
+                  </div>
+                  <div class="w3-clear"></div>
+                  <h4>Pujar radiografia</h4>
+              </div>
+          </div>
+          <div class="w3-quarter">
+              <div class="w3-container w3-teal w3-padding-16">
+                  <div class="w3-left"><i class="ion-ios-bookmarks w3-xxxlarge"></i></div>
+                  <div class="w3-right">
+                      <h3>23</h3>
+                  </div>
+                  <div class="w3-clear"></div>
+                  <h4>Temari</h4>
+              </div>
+          </div>
+          <div class="w3-quarter">
+              <div class="w3-container w3-orange w3-text-white w3-padding-16">
+                  <div class="w3-left"><i class="ion-person w3-xxxlarge"></i></div>
+                  <div class="w3-right">
+                      <h3>50</h3>
+                  </div>
+                  <div class="w3-clear"></div>
+                  <h4>Usuaris</h4>
+              </div>
+          </div>
+      </div>
+
+</template>
