--- a/client/divExemple.html
+++ b/client/divExemple.html
@@ -1,4 +1,4 @@
-<body>
+<template name="divExemple">
     <div class="w3-row-padding w3-margin-bottom">
         <div class="w3-quarter">
             <div class="w3-container w3-red w3-padding-16">
@@ -41,4 +41,4 @@
             </div>
         </div>
     </div>
-</body>
+</template>
