s'han eliminat els tags de body i afegit els de template

--- a/client/divExemple.html
+++ b/client/divExemple.html
@@ -7,7 +7,7 @@
                     <h3>52</h3>
                 </div>
                 <div class="w3-clear"></div>
-                <h4>Missatges</h4>
+                <h4>Missatges hola</h4>
             </div>
         </div>
         <div class="w3-quarter">
