--- a/client/menu/menu.html
+++ b/client/menu/menu.html
@@ -6,10 +6,10 @@
   {{/if}}
 
   {{#if isInRole 'professor'}}
-    {{> administrador}}
+    {{> professor}}
   {{/if}}
 
   {{#if isInRole 'alumne'}}
-    {{> administrador}}
+    {{> alumne}}
   {{/if}}
 </template>
