--- a/client/ui/pages/usuaris/Users.html
+++ b/client/ui/pages/usuaris/Users.html
@@ -1,6 +1,7 @@
 <template name="users">
   <div class="container" style="margin-top: 50px">
-  {{#if isInRole 'admin'}}
+  <!--{{#if isInRole 'admin'}}-->
+
   <div class="panel panel-default">
     <div class="panel-heading">
       Assignació de rols
@@ -38,8 +39,8 @@
     </table>
   </div>
 </div>
-  {{else}}
+  <!--{{else}}
     <h1>Es requereix un nivell d'accés superior. Contacti amb un administrador</h1>
-  {{/if}}
+  {{/if}}-->
 </div>
 </template>
