diverses modificacions dels rols

--- a/client/ui/pagines/usuaris/Rols.html
+++ b/client/ui/pagines/usuaris/Rols.html
@@ -1,6 +1,6 @@
-<template name="users">
+<template name="rols">
   <div class="container" style="margin-top: 50px">
-  <!--{{#if isInRole 'admin'}}-->
+  {{#if isInRole 'admin,professor'}}
 
   <div class="panel panel-default">
     <div class="panel-heading">
@@ -23,15 +23,19 @@
             <td>
               <select class="addRol">
                 <option value="alumne">alumne</option>
+                {{#if isInRole 'admin'}}
                 <option value="professor">professor</option>
                 <option value="admin">admin</option>
+                {{/if}}
               </select>
             </td>
             <td>
               <select class="delRol">
                 <option value="alumne">alumne</option>
+                {{#if isInRole 'admin'}}
                 <option value="professor">professor</option>
                 <option value="admin">admin</option>
+                {{/if}}
               </select>
             </td>
           </tr>
@@ -40,7 +44,7 @@
   </div>
 </div>
   <!--{{else}}
-    <h1>Es requereix un nivell d'accés superior. Contacti amb un administrador</h1>
-  {{/if}}-->
+    <h1>Es requereix un nivell d'accés superior. Contacti amb un administrador</h1> -->
+  {{/if}}
 </div>
 </template>
