--- a/client/ui/pages/usuaris/Users.html
+++ b/client/ui/pages/usuaris/Users.html
@@ -1,5 +1,5 @@
 <template name="users">
-  <div class="container" style="margin-top: 50px">
+  <div class="container" style="margin-top: 50px;margin-right:5px;">
   <!--{{#if isInRole 'admin'}}-->
 
   <div class="panel panel-default">
@@ -43,4 +43,5 @@
     <h1>Es requereix un nivell d'accés superior. Contacti amb un administrador</h1>
   {{/if}}-->
 </div>
+
 </template>
