Plantilla home professor

--- a/client/ui/pagines/usuaris/professor/home.html
+++ b/client/ui/pagines/usuaris/professor/home.html
@@ -1,8 +1,84 @@
 <template name="professor">
-  <h2>Template Professor</h2>
-  <ul class="list-group">
-    <li class="list-group-item">First item</li>
-    <li class="list-group-item">Second item</li>
-    <li class="list-group-item">Third item</li>
-  </ul>
+  <div class="w3-row-padding w3-margin-bottom">
+      <div class="w3-third">
+        <a href="#">
+          <div class="w3-container w3-red w3-padding-16">
+              <div class="w3-left"><i class="ion-chatboxes w3-xxxlarge"></i></div>
+              <div class="w3-right">
+                  <h3>*</h3>
+              </div>
+              <div class="w3-clear"></div>
+              <h4>Grups</h4>
+          </div>
+        </a>
+      </div>
+
+      <div class="w3-third">
+        <a href="#">
+          <div class="w3-container w3-blue w3-padding-16">
+              <div class="w3-left"><i class="ion-android-upload w3-xxxlarge"></i></div>
+              <div class="w3-right">
+                  <h3>*</h3>
+              </div>
+              <div class="w3-clear"></div>
+              <h4>Alumnes</h4>
+          </div>
+        </a>
+      </div>
+
+      <div class="w3-third">
+        <a href="#">
+          <div class="w3-container w3-teal w3-padding-16">
+              <div class="w3-left"><i class="ion-ios-bookmarks w3-xxxlarge"></i></div>
+              <div class="w3-right">
+                  <h3>*</h3>
+              </div>
+              <div class="w3-clear"></div>
+              <h4>Lliçons</h4>
+          </div>
+        </a>
+      </div>
+  </div>
+
+
+  <div class="w3-row-padding w3-margin-bottom">
+      <div class="w3-third">
+        <a href="#">
+          <div class="w3-container w3-red w3-padding-16">
+              <div class="w3-left"><i class="ion-chatboxes w3-xxxlarge"></i></div>
+              <div class="w3-right">
+                  <h3>*</h3>
+              </div>
+              <div class="w3-clear"></div>
+              <h4>Pujar radiografies</h4>
+          </div>
+        </a>
+      </div>
+
+      <div class="w3-third">
+        <a href="#">
+          <div class="w3-container w3-blue w3-padding-16">
+              <div class="w3-left"><i class="ion-android-upload w3-xxxlarge"></i></div>
+              <div class="w3-right">
+                  <h3>*</h3>
+              </div>
+              <div class="w3-clear"></div>
+              <h4>Validar radiografies</h4>
+          </div>
+        </a>
+      </div>
+
+      <div class="w3-third">
+        <a href="#">
+          <div class="w3-container w3-teal w3-padding-16">
+              <div class="w3-left"><i class="ion-ios-bookmarks w3-xxxlarge"></i></div>
+              <div class="w3-right">
+                  <h3>*</h3>
+              </div>
+              <div class="w3-clear"></div>
+              <h4>Examens</h4>
+          </div>
+        </a>
+      </div>
+  </div>
 </template>
