--- a/client/ui/pagines/temaActionBtns.html
+++ b/client/ui/pagines/temaActionBtns.html
@@ -1,6 +1,8 @@
-<template name="PosicionsActionBtns">
+<!--Created by Toni Salvador i Martí Gual-->
+<template name="temaActionBtns">
 
-	<button id="btnUpdate" type="button" class="btn btn-sm btn-default"  data-toggle="modal" data-target="#updateModal">
+
+    <button id="btnUpdate" type="button" class="btn btn-sm btn-default"  data-toggle="modal" data-target="#updateModal">
 
 		<span class="glyphicon glyphicon-pencil"></span>
 
