Menu home professor - Jordi Quique

--- a/client/ui/pagines/usuaris/professor/home.html
+++ b/client/ui/pagines/usuaris/professor/home.html
@@ -1,3 +1,4 @@
+<!-- Jordi i Quique -->
 <template name="professor">
   <div class="w3-row-padding w3-margin-bottom">
       <div class="w3-third">
@@ -8,7 +9,7 @@
                   <h3>*</h3>
               </div>
               <div class="w3-clear"></div>
-              <h4>Grups</h4>
+              <h4>Curs</h4>
           </div>
         </a>
       </div>
