--- a/client/ui/pagines/usuaris/estudiant/home.html
+++ b/client/ui/pagines/usuaris/estudiant/home.html
@@ -1,8 +1,78 @@
 <template name="alumne">
-  <h2>Template Alumne</h2>
-  <ul class="list-group">
-    <li class="list-group-item">First item</li>
-    <li class="list-group-item">Second item</li>
-    <li class="list-group-item">Third item</li>
-  </ul>
+    <div class="w3-row-padding w3-margin-bottom">
+            <div class="w3-third">
+                <a href="#">
+                    <div class="w3-container w3-red w3-padding-16">
+                        <div class="w3-left"><i class="ion-chatboxes w3-xxxlarge"></i></div>
+                        <div class="w3-right">
+                            <h3>52</h3>
+                        </div>
+                        <div class="w3-clear"></div>
+                        <h4>Missatges hola</h4>
+                    </div>
+                </a>
+            </div>
+            <div class="w3-third">
+                <a href="#">
+                    <div class="w3-container w3-red w3-padding-16">
+                        <div class="w3-left"><i class="ion-chatboxes w3-xxxlarge"></i></div>
+                        <div class="w3-right">
+                            <h3>52</h3>
+                        </div>
+                        <div class="w3-clear"></div>
+                        <h4>Missatges hola</h4>
+                    </div>
+                </a>
+            </div>
+            <div class="w3-third">
+                <a href="#">
+                    <div class="w3-container w3-red w3-padding-16">
+                        <div class="w3-left"><i class="ion-chatboxes w3-xxxlarge"></i></div>
+                        <div class="w3-right">
+                            <h3>52</h3>
+                        </div>
+                        <div class="w3-clear"></div>
+                        <h4>Missatges hola</h4>
+                    </div>
+                </a>
+            </div>
+        </div>
+    <div class="w3-row-padding w3-margin-bottom">
+            <div class="w3-third">
+                <a href="#">
+                    <div class="w3-container w3-red w3-padding-16">
+                        <div class="w3-left"><i class="ion-chatboxes w3-xxxlarge"></i></div>
+                        <div class="w3-right">
+                            <h3>52</h3>
+                        </div>
+                        <div class="w3-clear"></div>
+                        <h4>Missatges hola</h4>
+                    </div>
+                </a>
+            </div>
+            <div class="w3-third">
+                <a href="#">
+                    <div class="w3-container w3-red w3-padding-16">
+                        <div class="w3-left"><i class="ion-chatboxes w3-xxxlarge"></i></div>
+                        <div class="w3-right">
+                            <h3>52</h3>
+                        </div>
+                        <div class="w3-clear"></div>
+                        <h4>Missatges hola</h4>
+                    </div>
+                </a>
+            </div>
+            <div class="w3-third">
+                <a href="#">
+                    <div class="w3-container w3-red w3-padding-16">
+                        <div class="w3-left"><i class="ion-chatboxes w3-xxxlarge"></i></div>
+                        <div class="w3-right">
+                            <h3>52</h3>
+                        </div>
+                        <div class="w3-clear"></div>
+                        <h4>Missatges hola</h4>
+                    </div>
+                </a>
+            </div>
+    </div>
 </template>
