carpertes per fer llistats

--- a/client/menu/menu.html
+++ b/client/menu/menu.html
@@ -24,9 +24,9 @@ Funció: Pàgina amb 3 condicionals, en funció del rol del usuari mostrarem el 
     <h5>Panell Administració</h5>
   </div>
   <a href="#" class="w3-padding-16 w3-hide-large w3-dark-grey w3-hover-black" onclick="w3_close()" title="close menu"><i class="fa fa-remove fa-fw"></i>  Tencar Menu</a>
+  <a href="{{pathFor 'llistatUsuaris'}}" class="w3-padding"><i class="fa fa-users fa-fw"></i>  Llistat Usuaris</a>
   <a href="#" class="w3-padding w3-blue"><i class="fa fa-users fa-fw"></i>  Text per definir</a>
   <a href="#" class="w3-padding"><i class="fa fa-eye fa-fw"></i>  Text per definir</a>
-  <a href="#" class="w3-padding"><i class="fa fa-users fa-fw"></i>  Text per definir</a>
   <a href="#" class="w3-padding"><i class="fa fa-bullseye fa-fw"></i>  Text per definir</a>
   <a href="#" class="w3-padding"><i class="fa fa-diamond fa-fw"></i>  Text per definir</a>
 <br><br>
