--- a/imports/ui/pages/old/temaLlistat.html
+++ b/imports/ui/pages/old/temaLlistat.html
@@ -4,7 +4,9 @@
     {{#if currentUser}}
         <div class="container" style="margin-top: 50px">
             <div class="panel panel-default">
-                <div class="panel-heading"><h4>Temes</h4></div>
+                <div class="panel-heading"><h4>Temes</h4>
+                  <button type="button" class="btn btn-info crear">crear</button>
+                </div>
                 <div class="panel-body">
                     {{> tabular table=TabularTables.Tema class="table table-striped table-bordered table-condensed"}}
                 </div>
