--- a/imports/ui/pages/temes/temaActionBtns.html
+++ b/imports/ui/pages/temes/temaActionBtns.html
@@ -1,5 +1,5 @@
 <!--Created by Toni Salvador i Martí Gual-->
-<template name="temesEditar">
+<template name="temaActionBtns">
   <button id="editar" type="button" class="btn btn-sm btn-success"  data-toggle="modal" data-target="#editarModal">
 		<span class="glyphicon glyphicon-pencil"></span>
 	</button>
