--- a/imports/ui/pages/grups/modal.html
+++ b/imports/ui/pages/grups/modal.html
@@ -51,6 +51,7 @@
 				<div class="modal-footer">
 					<button type="button" class="btn btn-primary" data-dismiss="modal">Cancel·lar</button>
 					<button type="button" class="btn btn-success editar">Editar</button>
+					<button type="button" class="btn btn-danger eliminar">Eliminar</button>
 				</div>
 			</div>
 		</div>
