--- a/imports/ui/pages/temesToni/temes.html
+++ b/imports/ui/pages/temesToni/temes.html
@@ -1,3 +1,14 @@
 <template name="temes">
- {{> tabular table=TabularTables.Tema class="table table-striped table-bordered table-condensed"}}
+  {{#if currentUser}}
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <button type="button" class="btn btn-success crear">crear</button>
+      </div>
+      <div class="panel-body">
+        {{> tabular table=TabularTables.Tema class="table table-striped table-bordered table-condensed"}}
+      </div>
+      <div class="panel-footer">
+      </div>
+    </div>
+  {{/if}}
 </template>
