editar, elimnar i veure v1

--- a/imports/ui/pages/temes/temes.html
+++ b/imports/ui/pages/temes/temes.html
@@ -1,3 +1,6 @@
 <template name="temes">
+ <div class="panel-heading">
+        <button type="button" class="btn btn-success row crear">crear</button>
+      </div>
  {{> tabular table=TabularTables.Tema class="table table-striped table-bordered table-condensed"}}
 </template>
