--- a/imports/ui/pages/temes/modal.html
+++ b/imports/ui/pages/temes/modal.html
@@ -37,7 +37,7 @@
 							<div class="row">
 								<div class="col-md-12 col-lg-12">
 									<div class="input-group" style="margin-left:10%;margin-bottom:2%">
-										<span class="input-group-addon" id="posicio" style="width:100px;">Usuari</span>
+									<span class="input-group-addon" style="width:100px;">Usuari</span>
 											<input type="text" class="form-control" aria-describedby="basic-addon1"
 											name="modalUsuari" disabled>
 										</div>
@@ -48,7 +48,12 @@
 					</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-primary" data-dismiss="modal">Cancel·lar</button>
-							<button type="button" class="btn btn-success editar">Editar</button>
+			             {{#if accio}}
+			              <button type="button" class="btn btn-success editar">Editar</button>
+			              <button type="button" class="btn btn-danger eliminar">Eliminar</button>
+			              {{else}}
+			              <button type="button" class="btn btn-success desar">Afeguir</button>
+			              {{/if}}
 						</div>
 					</div>
 				</div>
