--- a/imports/ui/pages/grups/afegirGrups.html
+++ b/imports/ui/pages/grups/afegirGrups.html
@@ -1,4 +1,4 @@
-<template name="grupModal">
+<template name="afegirGrupModal">
 <div class="modal fade">
 	<div class="modal-dialog">
 		<div class="modal-content">
@@ -8,15 +8,6 @@
 			<div class="modal-body">
 				<form id="form">
 					<div class="container">
-						<div class="row">
-							<div class="col-md-12 col-lg-12">
-								<div class="input-group" style="margin-left:10%;margin-bottom:2%">
-									<span class="input-group-addon" style="width:100px;">Id</span>
-									<input type="text" class="form-control" aria-describedby="basic-addon1"
-									name="modalId" disabled>
-								</div>
-							</div>
-						</div>
 						<div class="row">
 							<div class="col-md-12 col-lg-12">
 								<div class="input-group" style="margin-left:10%;margin-bottom:2%">
@@ -41,7 +32,7 @@
 									<span class="input-group-addon" id="posicio" style="width:100px;">ID Curs
 									</span>
 										<input type="text" class="form-control" aria-describedby="basic-addon1"
-										name="modalCursId">
+										name="modalCursId" disabled>
 									</div>
 								</div>
 							</div>
@@ -49,14 +40,7 @@
 					</form>
 				</div>
 				<div class="modal-footer">
-					{{#if accio}}
 					<button type="button" class="btn btn-primary" data-dismiss="modal">Cancel·lar</button>
-					<button type="button" class="btn btn-success insertar">Insertar</button>
-					{{else}}
-					<button type="button" class="btn btn-primary" data-dismiss="modal">Cancel·lar</button>
-					<button type="button" class="btn btn-success editar">Editar</button>
-					<button type="button" class="btn btn-danger eliminar">Eliminar</button>
-                  	{{/if}}
 				</div>
 			</div>
 		</div>
