Conflicte routes TEMAS - MARC

--- a/imports/ui/pages/temes/temes.html
+++ b/imports/ui/pages/temes/temes.html
@@ -1,3 +1,3 @@
-<template name="temes">
+<template name="temesExemple">
  {{> tabular table=TabularTables.Tema class="table table-striped table-bordered table-condensed"}}
 </template>
