--- a/imports/ui/pages/temes/temes.html
+++ b/imports/ui/pages/temes/temes.html
@@ -1,3 +1,15 @@
-<template name="temesExemple">
- {{> tabular table=TabularTables.Tema class="table table-striped table-bordered table-condensed"}}
+<!-- Creat per Toni Salvador -->
+<template name="temes">
+  {{#if currentUser}}
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <button type="button" class="btn btn-success crear">crear</button>
+      </div>
+      <div class="panel-body">
+		{{> tabular table=TabularTables.Temes class="table table-striped table-bordered table-condensed"}}
+      </div>
+      <div class="panel-footer">
+      </div>
+    </div>
+  {{/if}}
 </template>
