proves id i nom usuari tabular

--- a/imports/ui/pages/temes/temes.html
+++ b/imports/ui/pages/temes/temes.html
@@ -4,3 +4,6 @@
       </div>
  {{> tabular table=TabularTables.Tema class="table table-striped table-bordered table-condensed"}}
 </template>
+<template name="usuariNom">
+	{{nomUsuari}}
+</template>
