Revert "Merge remote-tracking branch 'refs/remotes/origin/master'"
This reverts commit 70c73b96cc0fd118e3029ff06b41442c3199def2.

--- a/imports/ui/pages/old/homes/professor/home.html
+++ b/imports/ui/pages/old/homes/professor/home.html
@@ -1,41 +1,40 @@
 <!-- Jordi i Quique -->
 <template name="professor">
-  {{#if currentUser}}
-  <div class="row" style="padding-top:10px;">
-      <div class="col-md-4">
+  <div class="w3-row-padding w3-margin-bottom">
+      <div class="w3-third">
         <a href="#">
-          <div class="btn btn-primary" style="width:100%; heigth: 100%;">
-              <div class="center-block">
+          <div class="w3-container w3-red w3-padding-16">
+              <div class="w3-left"><i class="ion-chatboxes w3-xxxlarge"></i></div>
+              <div class="w3-right">
                   <h3>*</h3>
               </div>
-              <div class="center-block">
-              	<h4>Curs</h4>
-              </div>
+              <div class="w3-clear"></div>
+              <h4>Curs</h4>
           </div>
         </a>
       </div>
 
-      <div class="col-md-4">
+      <div class="w3-third">
         <a href="#">
-          <div class="btn btn-primary" style="width:100%; heigth: 100%;">
-
-              <div class="center-block">
+          <div class="w3-container w3-blue w3-padding-16">
+              <div class="w3-left"><i class="ion-android-upload w3-xxxlarge"></i></div>
+              <div class="w3-right">
                   <h3>*</h3>
               </div>
-              <div class="center-block"></div>
+              <div class="w3-clear"></div>
               <h4>Alumnes</h4>
           </div>
         </a>
       </div>
 
-      <div class="col-md-4">
+      <div class="w3-third">
         <a href="#">
-          <div class="btn btn-primary" style="width:100%; heigth: 100%;">
-
-              <div class="center-block">
+          <div class="w3-container w3-teal w3-padding-16">
+              <div class="w3-left"><i class="ion-ios-bookmarks w3-xxxlarge"></i></div>
+              <div class="w3-right">
                   <h3>*</h3>
               </div>
-              <div class="center-block"></div>
+              <div class="w3-clear"></div>
               <h4>Lliçons</h4>
           </div>
         </a>
@@ -43,45 +42,44 @@
   </div>
 
 
-  <div class="row" style="padding-top:10px;">
-      <div class="col-md-4">
+  <div class="w3-row-padding w3-margin-bottom">
+      <div class="w3-third">
         <a href="#">
-          <div class="btn btn-primary" style="width:100%; heigth: 100%;">
-
-              <div class="center-block">
+          <div class="w3-container w3-red w3-padding-16">
+              <div class="w3-left"><i class="ion-chatboxes w3-xxxlarge"></i></div>
+              <div class="w3-right">
                   <h3>*</h3>
               </div>
-              <div class="center-block"></div>
+              <div class="w3-clear"></div>
               <h4>Pujar radiografies</h4>
           </div>
         </a>
       </div>
 
-      <div class="col-md-4">
+      <div class="w3-third">
         <a href="#">
-          <div class="btn btn-primary" style="width:100%; heigth: 100%;">
-
-              <div class="center-block">
+          <div class="w3-container w3-blue w3-padding-16">
+              <div class="w3-left"><i class="ion-android-upload w3-xxxlarge"></i></div>
+              <div class="w3-right">
                   <h3>*</h3>
               </div>
-              <div class="center-block"></div>
+              <div class="w3-clear"></div>
               <h4>Validar radiografies</h4>
           </div>
         </a>
       </div>
 
-      <div class="col-md-4">
+      <div class="w3-third">
         <a href="#">
-          <div class="btn btn-primary" style="width:100%; heigth: 100%;">
-
-              <div class="center-block">
+          <div class="w3-container w3-teal w3-padding-16">
+              <div class="w3-left"><i class="ion-ios-bookmarks w3-xxxlarge"></i></div>
+              <div class="w3-right">
                   <h3>*</h3>
               </div>
-              <div class="center-block"></div>
+              <div class="w3-clear"></div>
               <h4>Examens</h4>
           </div>
         </a>
       </div>
   </div>
-  {{/if}}
 </template>
