--- a/imports/ui/pages/llico/llico.html
+++ b/imports/ui/pages/llico/llico.html
@@ -1,3 +1,4 @@
 <template name="llico">
  {{> tabular table=TabularTables.Llico class="table table-striped table-bordered table-condensed"}}
+ <button type="button" class="btn btn-success insertar">Insertar</button>
 </template>
