--- a/imports/ui/pages/llico/modal.html
+++ b/imports/ui/pages/llico/modal.html
@@ -36,7 +36,7 @@
  <div class="col-md-12 col-lg-12">
  <div class="input-group" style="margin-left:10%;margin-bottom:2%">
  <span class="input-group-addon" id="posicio" style="width:100px;">Percentatge</span>
- <input type="text" class="form-control" aria-describedby="basic-addon1" name="modalPercentatge" disabled>
+ <input type="text" class="form-control" aria-describedby="basic-addon1" name="modalPercentatge">
  </div>
  </div>
  </div>
@@ -45,8 +45,12 @@
  </div>
  <div class="modal-footer">
  <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel·lar</button>
+ {{#if accio}}
+ <button type="button" class="btn btn-success insertar">Insertar</button>
+ {{else}}
  <button type="button" class="btn btn-success editar">Editar</button>
- <button type="button" class="btn btn-success eliminar">Eliminar</button>
+ <button type="button" class="btn btn-danger borrar">Eliminar</button>
+ {{/if}}
  </div>
  </div>
  </div>
