--- a/imports/ui/pages/grups/modal.html
+++ b/imports/ui/pages/grups/modal.html
@@ -3,7 +3,7 @@
 	<div class="modal-dialog">
 		<div class="modal-content">
 			<div class="modal-header">
-				<h4 class="modal-title">Tema</h4>
+				<h4 class="modal-title">Grups</h4>
 			</div>
 			<div class="modal-body">
 				<form id="form">
@@ -49,9 +49,14 @@
 					</form>
 				</div>
 				<div class="modal-footer">
-					<button type="button" class="btn btn-primary" data-dismiss="modal">Cancel·lar</button>
-					<button type="button" class="btn btn-success editar">Editar</button>
-					<button type="button" class="btn btn-danger eliminar">Eliminar</button>
+       <button type="button" class="btn btn-primary" data-dismiss="modal">Tancar</button>
+       {{#if accio}}
+         <button type="button" class="btn btn-success editar">Editar</button>
+         <button type="button" class="btn btn-danger eliminar">Eliminar</button>
+       {{else}}
+        <button type="button" class="btn btn-success desar">Desar</button>
+{{/if}}
+
 				</div>
 			</div>
 		</div>
