--- a/imports/ui/pages/grups/grups.html
+++ b/imports/ui/pages/grups/grups.html
@@ -1,3 +1,4 @@
 <template name="grups">
     {{> tabular table=TabularTables.Grups class="table table-striped table-bordered table-condensed"}}
+    <button type="button" class="btn btn-success crear">Crear Grup</button>
 </template>
