--- a/imports/ui/pages/grups/modal.html
+++ b/imports/ui/pages/grups/modal.html
@@ -31,8 +31,12 @@
                                 <div class="col-md-12 col-lg-12">
                                     <div class="input-group" style="margin-left:10%;margin-bottom:2%">
                                         <span class="input-group-addon" style="width:100px;">Curs ID</span>
-                                        <input type="text" class="form-control" aria-describedby="basic-addon1"
+                                        <select class="form-control" aria-describedby="basic-addon1"
                                                name="modalDescripcio">
+                                            {{#each curs}}
+                                                <option value="{{_id}}">{{nom}}</option>
+                                            {{/each}}
+                                        </select>
                                     </div>
                                 </div>
                             </div>
@@ -51,7 +55,7 @@
                 <div class="modal-footer">
 
                         {{#if accio}}
-                    <button type="button" class="btn btn-success insertar">Insertar entrada</button>
+                            <button type="button" class="btn btn-success insertar">Insertar entrada</button>
                             <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel·lar</button>
                         {{else}}
                             <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel·lar</button>
